# Sign-ifier

./: .gitignore  README.md
cmake_demo/: CMakeLists.txt  videoStreamer.py
cmake_demo/app/: CMakeLists.txt
cmake_demo/app/include/: capture.h  udp_handler.h
cmake_demo/app/src/: capture.c  main.c  udp_handler.c
cmake_demo/hal/: CMakeLists.txt
cmake_demo/hal/include/hal/: button.h  gpio.h  lcd.h
cmake_demo/hal/src/: button.c  gpio.c  lcd.c
cmake_demo/server/: index.js  package-lock.json  package.json  server.js
cmake_demo/server/lib/: page.js  udp_server.js
cmake_demo/server/public/: homepage.html  index.html  script.js  style.css
cmake_demo/server/public/javascripts/: script.js
cmake_demo/server/public/stylesheets/: style.css
cmake_demo/server/routers/: page.js
cmake_demo/server2/: package-lock.json  package.json  server.js
cmake_demo/server2/public/: homepage.html  script.js
cmake_demo/server2/routers/: page.js
cmake_demo/server3/: index.html  index.js  package-lock.json  package.json
cmake_demo/server4/: package-lock.json  server.js
cmake_demo/server4/lib/: udp_serverC.js  udp_serverPY.js
cmake_demo/server4/public/: index.html
cmake_demo/server4/public/javascripts/: udp_ui.js
cmake_demo/server4/public/stylesheets/: style.css
python/: Makefile  collect_imgs.py  create_dataset.py  data.pickle  inference_classifier.py  model.p  read_inference  read_inference.c  requirements.txt  test_A.mov  train_classifier.py
